--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -6,121 +6,85 @@
                 <img class="features__img" src="img/svg/icons/notes27.svg">
                 <div>
                     <h3 class="features__head">Visual Composer</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or
-                        to
-                        remember any shortcodes with our. </p></div>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/lcd2.svg">
 
                 <div>
                     <h3 class="features__head">Responsive</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/notebook79.svg">
                 <div>
                     <h3 class="features__head">Retina Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/pencil124.svg">
                 <div>
                     <h3 class="features__head">Typography</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/wallet35.svg">
                 <div>
-                    <h3 class="features__head">VTheme Options Pannel</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <h3 class="features__head">Theme Options Pannel</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/hand224.svg">
                 <div>
                     <h3 class="features__head">Dummy Content</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/globe32.svg">
                 <div>
                     <h3 class="features__head">Many Style Available</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/cropping4.svg">
                 <div>
                     <h3 class="features__head">Header Style</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/bag45.svg">
                 <div>
                     <h3 class="features__head">10000+ icons</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/dish7.svg">
                 <div>
                     <h3 class="features__head">Support</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/wealth.svg">
                 <div>
                     <h3 class="features__head">Update</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/soft4.svg">
                 <div>
                     <h3 class="features__head">SEO Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
-                        code
-                        or to
-                        remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
         </div>
