--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -8,6 +8,7 @@
     &__content {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between
     } // &__heading {
     //   text-transform: uppercase;
     // }
@@ -35,11 +36,11 @@
     &__section {
         display: flex;
         justify-content: space-between;
-        padding: 1em;
+        padding: 0.8em;
         flex-grow: 1;
         min-width: 250px;
-        max-width: 320px;
-        margin: 10px auto;
+        max-width: 33%;
+        margin-bottom: 54px;
         transition: background-color 1s ease;
         &:hover {
             background-color: $color-mainYellow;
@@ -51,11 +52,12 @@
     &__head {
         font-size: 18px;
         line-height: 25px;
+        font-weight: $h3-font-weight;
     }
     &__img {
         width: 45px;
         padding-right: 8px;
-        max-height: 36px; //fill: #000099;
+        max-height: 37px; //fill: #000099;
     }
     &__paragraph {
         font-weight: $p-font-weight; // font-size: $p-font-size;
@@ -66,19 +68,22 @@
 }
 
 @media (max-width: 959px) {
-  .features {
-    &__section {
-      max-width: calc(50vw - 20px);}}
+    .features {
+        &__section {
+            max-width: calc(50vw - 20px);
+        }
+    }
 }
+
 @media (max-width: 600px) {
     .features {
         &__section {
-          max-width: 100vw;
-          margin: 0;
-          padding: 10px 20px;
+            max-width: 100vw;
+            margin: 0;
+            padding: 10px 20px;
         }
         &__paragraph {
-          line-height: 20px;
+            line-height: 20px;
         }
     }
 }
