--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -21,6 +21,7 @@
             <form class="modal__form">
                 <input type="email" name="email" id="email" class="modal__email" placeholder="Your email">
                 <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name">
+                <textarea type="text" class="modal__textarea" placeholder="Your message"></textarea>
                 <input type="submit" class="modal__submit" value="send">
             </form>
             <button class="modal__close" id="modal__close"></button>
