--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -115,7 +115,7 @@
             }
         }
     }
-    &:focus{
+    &:focus {
         outline: none;
     }
 }
@@ -124,7 +124,7 @@
     text-decoration: none;
     display: table-cell;
     position: relative;
-    padding: 18px 66px 18px 24px; //optimized
+    padding: 16px 51px 16px 24px;
     color: $h1-font-color;
     font-size: 16px;
     font-weight: 400;
@@ -154,6 +154,8 @@
 
 @media only screen and (max-width: 768px) {
     .section-name {
+        min-width: unset;
+        max-width: calc(100vw - 40px);
         margin-top: 60px;
         margin-bottom: 45px;
         &--arrow-l:after,
@@ -162,5 +164,12 @@
         &--arrow-r:before {
             content: none;
         }
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .section-name {
+        font-size: 16px;
+        line-height: 16px;
     }
 }
