--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -21,43 +21,47 @@
     }
     &:before {
         background-image: url("../img/svg/icons/send.svg");
-        width: 30px;
-        height: 29px;
-        top: 42px;
-        left: 668px;
-        transform: scaleX(-1) rotate(-161deg);
+        background-size: 36px 36px;
+        width: 35px;
+        height: 34px;
+        top: 48px;
+        left: 647px;
+        transform: scaleX(-1) rotate(-155deg);
     }
     &:after {
         background-image: url("../img/svg/icons/path_2.svg");
         width: 365px;
         height: 50px;
-        top: 19px;
-        left: 308px;
+        top: 28px;
+        left: 291px;
     }
     &__message {
         width: 42%;
+        min-width: 392px;
     }
     &__title {
         color: $h1-font-color;
         text-transform: uppercase;
         font-size: 42px;
-        /* Приближение из-за подстановки шрифтов */
         font-weight: 700;
+        line-height: 1.2;
+        margin: 33px 0 30px;
     }
     &__text {
         color: $h1-font-color;
         font-size: 16px;
         font-weight: 300;
         line-height: 30px;
-        height: calc(100% - 148px);
+        min-height: 240px;
+        max-height: calc(100vh - 490px);
         overflow: auto;
-        margin-bottom: 30px;
+        margin-bottom: 54px;
         padding-right: 10px;
     }
     &__image {
-        position: relative; // border: 3px solid green;
+        position: relative;
         width: 58%;
-        margin-top: 86px;
+        margin-top: 92px;
     }
 }
 
@@ -66,13 +70,12 @@
         position: absolute;
         width: 431px;
         height: 274px;
-        bottom: 44px;
-        right: 85px;
+        top: 27px;
+        right: 101px;
         &__background {
             position: absolute;
             display: block;
-            bottom: -18px;
-            right: 0;
+            right: 19px;
             width: 601px;
             height: 365px;
         }
@@ -83,15 +86,14 @@
     }
     &--small {
         position: absolute;
-        width: 127px;
-        height: 221px;
-        bottom: 45px;
-        right: -7px;
+        width: 125px;
+        top: 86px;
+        right: 9px;
         &__background {
             position: absolute;
             display: block;
-            bottom: 0;
-            right: -15px;
+            top: 41px;
+            right: 0;
             width: 177px;
             height: 307px;
         }
@@ -102,8 +104,8 @@
     }
     &__dots {
         position: absolute;
-        bottom: -88px;
-        right: 225px;
+        top: 370px;
+        right: 267px;
     }
 }
 
@@ -116,7 +118,7 @@
     ul {
         display: inherit;
         li {
-            margin: 0 0.25rem;
+            margin: 0 3px;
             button {
                 display: block;
                 width: 10px;
@@ -125,9 +127,8 @@
                 border: none;
                 border-radius: 100%;
                 text-indent: -9999px;
-                background-color: $color-mainGrey; // text-indent: -9999px;
-
-                &:focus{
+                background-color: $color-mainGrey;
+                &:focus {
                     outline: none;
                 }
             }
@@ -135,5 +136,16 @@
     }
     li.slick-active button {
         background-color: white;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    .hero {
+        &:before,
+        &:after {
+            content: none;
+        }
     }
 }
