--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -7,12 +7,7 @@
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. laboris
                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                    qui officia deserunt mollit. laborum. Sed ut perspiciatis unde omnis iste. natus error sit voluptatem
-                    accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                    quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-                    aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione. voluptatem sequi. nesciunt.
-                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-                    non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    qui officia deserunt mollit.</p>
                 <a class="button__icon--right" href="#">View More</a>
             </figcaption>
             <div class="hero__image">
