--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -19,10 +19,12 @@
         <div class="modal">
             <h2 class="modal__head">Hire Us</h2>
             <form class="modal__form">
-                <input type="email" name="email" id="email" class="modal__email" placeholder="Your email">
-                <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name">
-                <textarea type="text" class="modal__textarea" placeholder="Your message"></textarea>
-                <input type="submit" class="modal__submit" value="send">
+                <input type="email" name="email" id="email" class="modal__email" placeholder="Your email" required>
+                <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name" required>
+                <textarea type="text" name="message" class="modal__textarea" placeholder="Your message"></textarea>
+                <!--<input type="submit" name="submit" class="modal__submit" value="SEND" onclick="sendMail()">-->
+                <a class="button__icon--right modal__submit" href="#">SEND</a>
+
             </form>
             <button class="modal__close" id="modal__close"></button>
             <!--<svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"-->
