--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -5,11 +5,11 @@
             <div class="packages__coll">
                 <h3 class="coll__name--mobile coll__btn--grey">BASIC</h3>
                 <ul>
-                    <h4 class="coll__name packages--grey">BASIC</h4>
+                    <h4 class="coll__name packages--grey">Basic</h4>
                     <li class="coll__li"><span class="coll__span"> 5 web sites</span></li>
                     <li class="coll__li"><span class="coll__span">15 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">l databases</span></li>
-                    <li class="coll__li"><span class="coll__span">storage</span></li>
+                    <li class="coll__li"><span class="coll__span">10 Gb storage</span></li>
                     <li class="coll__price packages--grey"><b class="coll__price--dol">$5</b>/mo.</li>
                     <button class="coll__btn coll__btn--grey" form="">ORDER NOW</button>
                 </ul>
@@ -17,7 +17,7 @@
             <div class="packages__coll">
                 <h3 class="coll__name--mobile coll__btn--red">STANDART</h3>
                 <ul>
-                    <h4 class="coll__name packages--red">STANDART</h4>
+                    <h4 class="coll__name packages--red">Standart</h4>
                     <li class="coll__li"><span class="coll__span"> 15 web sites</span></li>
                     <li class="coll__li"><span class="coll__span">40 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">20 MySql databases</span></li>
@@ -30,7 +30,7 @@
             <div class="packages__coll">
                 <h3 class="coll__name--mobile coll__btn--yellow">PREMIUM</h3>
                 <ul>
-                    <h4 class="coll__name packages--yellow">PREMIUM</h4>
+                    <h4 class="coll__name packages--yellow">Premium</h4>
                     <li class="coll__li"><span class="coll__span">30 web sites</span></li>
                     <li class="coll__li"><span class="coll__span">50 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">40 MySql databases</span></li>
