--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -13,7 +13,7 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: flex-start;
-        padding: 0;
+        // padding: 0;
     }
     &--minimized {
         height: 66px !important;
