--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -2,8 +2,8 @@
     <div class="container history__container" data-aos="fade-up">
         <div class="history__left">
             <div class="history__image">
-                <img class="history__image--background" src="img/png/happy_clerk.gif">
-                <img class="history__image--hover" src="img/svg/happy_clerk_lamp.svg">
+                <img class="history__image--background" src="img/png/happy_clerk.gif" alt="happy clerk">
+                <img class="history__image--hover" src="img/svg/happy_clerk_lamp.svg" alt="lamp">
             </div>
         </div>
 
@@ -23,7 +23,7 @@
                 lacus augue, volutpat quis porttitor a, placerat in lacus.
             </p>
 
-            <button type="button" href="#" class="history__button yellow-btn">browse our story</button>
+            <button type="button" class="history__button yellow-btn">browse our story</button>
         </div>
 
     </div>
