--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -1,7 +1,7 @@
 <section class="modal modal__container">
     <div class="modal__dialog">
         <svg class="modal__svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon class="modal__polygon"/>
+            <polygon class="modal__polygon" points=""/>
         </svg>
 
         <div class="modal__content">
