--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -19,7 +19,7 @@
     background-color: $color-mainYellow;
 }
 
-@media screen and (max-width:959px) {
+@media (max-width:1044px) {
     .container {
         padding: 0 20px;
     }
