--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -26,25 +26,26 @@
     &__h3 {
         font-size: $h3-font-size;
         font-weight: 500;
-        color: #e6e9ed; // padding: 43px 0 28px 0;
+        color: #e6e9ed;
         padding-bottom: 28px;
     }
     &__link {
         text-decoration: none;
         color: #aab2bd;
         line-height: 2;
-        transition: all 1s ease;
+        transition: all .15s ease;
         &:hover {
             color: white;
+            font-weight: 700;
         }
     }
-    &__item {
-        transition: all 0.75s ease;
-        &:hover {
-            transform: rotateX(360deg) scale(1.3);
-            transform-origin: left;
-        }
-    }
+    // &__item {
+        // transition: all 0.15s ease;
+        // &:hover {
+            // transform: rotateX(360deg) scale(1.3);
+            // transform-origin: left;
+        // }
+    // }
 }
 
 .social {
