--- a/src/scss/_process.scss
+++ b/src/scss/_process.scss
@@ -3,6 +3,6 @@
 .process {
     background: url('../img/png/pattern.png');
     &__content {
-        // background-image: url("../img/svg/big_pic/map.svg");
+padding-bottom: 110px;
     }
 }
