--- a/src/templates/partials/_hire_us.html
+++ b/src/templates/partials/_hire_us.html
@@ -1,10 +1,10 @@
 <section class="hire_us">
     <div class="container" data-aos="fade-up">
         <div class="hire">
-            <img class="hire__img" src="img/png/hire.png">
+            <img class="hire__img" src="img/png/hire.png" alt="hand work">
             <div class="hire__content">
                 <h3 class="hire__h3">NEED CREATIVE WORKERS?</h3>
-                <button class="hire__button" form=""><b>HIRE US</b></button>
+                <button class="hire__button" type="button"><b>HIRE US</b></button>
             </div>
         </div>
     </div>
