--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -3,39 +3,39 @@
         <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
         <div class="packages__table">
             <div class="packages__coll">
+                <h4 class="coll__name packages--grey">BASIC</h4>
                 <ul>
-                    <h4 class="coll__name packages--grey">BASIC</h4>
                     <li class="coll__li"><span class="coll__span"> web sites</span></li>
                     <li class="coll__li"><span class="coll__span"> e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">l databases</span></li>
                     <li class="coll__li"><span class="coll__span">storage</span></li>
                     <li class="coll__price packages--grey"><b class="coll__price__dol">$5</b>/mo.</li>
-                    <button class="coll__btn coll__btn--grey" form="">ORDER NOW</button>
                 </ul>
+                <button class="coll__btn coll__btn--grey" type="button">ORDER NOW</button>
             </div>
             <div class="packages__coll">
+                <h4 class="coll__name packages--red">STANDART</h4>
                 <ul>
-                    <h4 class="coll__name packages--red">STANDART</h4>
                     <li class="coll__li"><span class="coll__span"> web sites</span></li>
                     <li class="coll__li"><span class="coll__span">40 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">20 MySql databases</span></li>
                     <li class="coll__li"><span class="coll__span">50 Gb storage</span></li>
                     <li class="coll__price packages--red">
                         <b class="coll__price__dol">$12</b>/mo.</li>
-                    <button class="coll__btn coll__btn--red" form="">ORDER NOW</button>
                 </ul>
+                <button class="coll__btn coll__btn--red" type="button">ORDER NOW</button>
             </div>
             <div class="packages__coll">
+                <h4 class="coll__name packages--yellow">PREMIUM</h4>
                 <ul>
-                    <h4 class="coll__name packages--yellow">PREMIUM</h4>
                     <li class="coll__li"><span class="coll__span">30 web sites</span></li>
                     <li class="coll__li"><span class="coll__span">50 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">40 MySql databases</span></li>
                     <li class="coll__li"><span class="coll__span">100 Gb storage</span></li>
                     <li class="coll__price packages--yellow">
                         <b class="coll__price__dol">$19</b>/mo.</li>
-                    <button class="coll__btn coll__btn--yellow" form="">ORDER NOW</button>
                 </ul>
+                <button class="coll__btn coll__btn--yellow" type="button">ORDER NOW</button>
             </div>
 
         </div>
