--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -43,7 +43,7 @@
             </div>
         </figure>
     </div>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         $('.slider--big').slick({
             autoplay: true,
