--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -36,16 +36,15 @@
         transition: all .15s ease;
         &:hover {
             color: white;
-            font-weight: 700;
         }
     }
-    // &__item {
-        // transition: all 0.15s ease;
-        // &:hover {
-            // transform: rotateX(360deg) scale(1.3);
-            // transform-origin: left;
-        // }
-    // }
+    &__item {
+        transition: all 0.15s ease;
+        &:hover {
+            transform: scale(1.01);
+            transform-origin: left;
+        }
+    }
 }
 
 .social {
