--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -71,6 +71,7 @@
     .features {
         &__section {
             max-width: calc(50vw - 20px);
+            margin-bottom: 15px;
         }
     }
 }
