add alt for img

--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -3,14 +3,14 @@
         <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
         <div class="features__content">
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/notes27.svg">
+                <img class="features__img" src="img/svg/icons/notes27.svg" alt="Visual Composer">
                 <div>
                     <h3 class="features__head">Visual Composer</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/lcd2.svg">
+                <img class="features__img" src="img/svg/icons/lcd2.svg" alt="Responsive">
 
                 <div>
                     <h3 class="features__head">Responsive</h3>
@@ -18,70 +18,70 @@
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/notebook79.svg">
+                <img class="features__img" src="img/svg/icons/notebook79.svg" alt="Retina Ready">
                 <div>
                     <h3 class="features__head">Retina Ready</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/pencil124.svg">
+                <img class="features__img" src="img/svg/icons/pencil124.svg" alt="Typography">
                 <div>
                     <h3 class="features__head">Typography</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/wallet35.svg">
+                <img class="features__img" src="img/svg/icons/wallet35.svg" alt="Theme Options Pannel">
                 <div>
                     <h3 class="features__head">Theme Options Pannel</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/hand224.svg">
+                <img class="features__img" src="img/svg/icons/hand224.svg" alt="Dummy Content">
                 <div>
                     <h3 class="features__head">Dummy Content</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/globe32.svg">
+                <img class="features__img" src="img/svg/icons/globe32.svg" alt="Many Style Available">
                 <div>
                     <h3 class="features__head">Many Style Available</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/cropping4.svg">
+                <img class="features__img" src="img/svg/icons/cropping4.svg" alt="Header Style">
                 <div>
                     <h3 class="features__head">Header Style</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/bag45.svg">
+                <img class="features__img" src="img/svg/icons/bag45.svg" alt="10000+ icons">
                 <div>
                     <h3 class="features__head">10000+ icons</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/dish7.svg">
+                <img class="features__img" src="img/svg/icons/dish7.svg" alt="Support">
                 <div>
                     <h3 class="features__head">Support</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/wealth.svg">
+                <img class="features__img" src="img/svg/icons/wealth.svg" alt="Update">
                 <div>
                     <h3 class="features__head">Update</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
-                <img class="features__img" src="img/svg/icons/soft4.svg">
+                <img class="features__img" src="img/svg/icons/soft4.svg" alt="SEO Ready">
                 <div>
                     <h3 class="features__head">SEO Ready</h3>
                     <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
