--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -6,7 +6,7 @@
 
         <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
         <div class="services__block">
-            <img class="services__image services__size" src="img/png/macbook_1.png">
+            <img class="services__image services__size" src="img/png/macbook_1.png" alt="mackbook">
             <article class="services__content">
                 <h3 class="services__header">web design</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra.
@@ -23,11 +23,11 @@
                 </p>
                 <button href="#" class="yellow-btn services__btn open-button">view more </button>
             </article>
-            <img class="services__image services__size" src="img/png/macbook_1.png">
+            <img class="services__image services__size" src="img/png/macbook_1.png" alt="mackbook">
 
         </div>
         <div class="services__block">
-            <img class="services__image services__size" src="img/png/macbook_1.png">
+            <img class="services__image services__size" src="img/png/macbook_1.png" alt="mackbook">
             <article class="services__content">
                 <h3 class="services__header">affiliate marketting</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra.
