--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -47,7 +47,7 @@
         padding-bottom: 14px;
         font-size: $p-font-size;
         color: $p-font-color;
-        line-height: $p-line-height;
+        line-height: 30px;
         font-weight: $p-font-weight;
         flex-grow: 1;
     }
@@ -64,6 +64,15 @@
         }
         &__right {
             width: 100%;
+            padding-left: 0;
+        }
+    }
+}
+
+@media (max-width:520px) {
+    .history {
+        &__right {
+            min-width: unset;
         }
     }
 }
