--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -154,7 +154,7 @@
 
   }
   &__submit {
-    width: 30%;
+    // width: 30%;
     align-self: center;
     transition: all 0.3s;
     text-align: center;
@@ -207,4 +207,3 @@
     transform: scale(0);
   }
 }
-
