--- a/src/scss/_hire.scss
+++ b/src/scss/_hire.scss
@@ -49,7 +49,7 @@ $border-radius: 2px;
       transform: rotateX(90deg) translateY(-80%);
     }
     &:hover {
-      background-color: $color-black;
+      background-color: $color-mainGrey;
       color: $color-white;
     }
     &:focus {
