--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -23,7 +23,7 @@
                 <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name" required>
                 <textarea type="text" name="message" class="modal__textarea" placeholder="Your message"></textarea>
                 <!--<input type="submit" name="submit" class="modal__submit" value="SEND" onclick="sendMail()">-->
-                <a class="button__icon--right modal__submit" href="#">SEND</a>
+                <button class="button__icon--right modal__submit">Send</button>
 
             </form>
             <button class="modal__close" id="modal__close"></button>
