--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -18,10 +18,10 @@
     <div class="modal__background">
         <div class="modal">
             <h2 class="modal__head">Hire Us</h2>
-            <form class="modal__form">
+            <form class="modal__form" name="hire_us">
                 <input type="email" name="email" id="email" class="modal__email" placeholder="Your email" required>
                 <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name" required>
-                <textarea type="text" name="message" class="modal__textarea" placeholder="Your message"></textarea>
+                <textarea name="message" class="modal__textarea" placeholder="Your message"></textarea>
                 <!--<input type="submit" name="submit" class="modal__submit" value="SEND" onclick="sendMail()">-->
                 <button class="button__icon--right modal__submit">Send</button>
 
@@ -29,4 +29,4 @@
             <button class="modal__close" id="modal__close"></button>
         </div>
     </div>
-</div>c
+</div>
