--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,5 +1,7 @@
 .modal {
+  margin-top: 60px;
   &__container {
+    margin-top: 66px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -115,24 +117,29 @@
     }
   }
   &__close {
-    color: #777;
-    font: 14px/100% arial, sans-serif;
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+    color: $color-mainGrey;
+    // font: 14px/100% arial, sans-serif;
     position: absolute;
-    right: 5px;
-    text-decoration: none;
+    right: 10px;
+    // text-decoration: none;
     text-shadow: 0 1px 0 #fff;
-    top: 5px;
+    top: 10px;
     border: none;
-    background: white;
+    // background: white;
     &:after {
-      content: '✖'; /* UTF-8 symbol */
+      // content: '✖'; /* UTF-8 symbol */
     }
     &:focus {
-      outline: none;
+      // outline: none;
     }
   }
 
   &__form {
+    min-width: 240px;
+    min-height: 400px;
     width: 40vw;
     height: 50vh;
     display: flex;
