--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -26,7 +26,9 @@
                 <button class="button__icon--right modal__submit">Send</button>
 
             </form>
-            <button class="modal__close" id="modal__close"></button>
+            <button class="modal__close" id="modal__close">
+                    <i class="nav__burger--close fas fa-times"></i>
+            </button>
         </div>
     </div>
 </div>
