--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -1,7 +1,4 @@
 <section class="services">
-    <a href="javascript:" id="return-to-top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
     <div class="container" data-aos="fade-up">
 
         <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
@@ -51,4 +48,7 @@
             </div>
         </div>
     </div>
+    <a href="javascript:" id="return-to-top" class="button--round">
+        <i class="icon fas fa-chevron-up"></i>
+    </a>
 </section>
