--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -120,28 +120,65 @@
     }
 }
 
-.button__icon--right {
-    text-decoration: none;
-    display: table-cell;
-    position: relative;
-    padding: 16px 51px 16px 24px;
-    color: $h1-font-color;
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    border-radius: 2px;
-    background-color: #464646;
-    box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
-    &:after {
-        box-sizing: border-box;
-        position: absolute;
-        padding: 16px 30px;
-        right: 0;
-        top: 0;
-        content: "";
-        height: 100%;
-        width: 27px;
-        background: url("../img/png/send.png") no-repeat center;
+@keyframes pulse {
+    to {
+        box-shadow: 0 0 0 45px rgba(255, 192, 56, 0);
+    }
+}
+
+.button {
+    &--round {
+        background: $color-mainYellow;
+        opacity: 0.7;
+        width: 50px;
+        height: 50px;
+        display: block;
+        text-decoration: none;
+        border-radius: 35px;
+        transition: all 0.3s ease;
+        box-shadow: 0 0 0 0 rgba(255, 192, 56, 0.7);
+        .icon {
+            color: #fff;
+            margin: 0;
+            position: relative;
+            left: 16px;
+            top: 13px;
+            font-size: 19px;
+            transition: all 0.3s ease;
+        }
+        &:hover {
+            animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+            background: $color-mainYellow;
+            opacity: 0.9;
+            .icon {
+                color: #fff;
+                top: 5px;
+            }
+        }
+    }
+    &__icon--right {
+        text-decoration: none;
+        display: table-cell;
+        position: relative;
+        padding: 16px 51px 16px 24px;
+        color: $h1-font-color;
+        font-size: 16px;
+        font-weight: 400;
+        text-align: left;
+        border-radius: 2px;
+        background-color: #464646;
+        box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
+        &:after {
+            box-sizing: border-box;
+            position: absolute;
+            padding: 16px 30px;
+            right: 0;
+            top: 0;
+            content: "";
+            height: 100%;
+            width: 27px;
+            background: url("../img/png/send.png") no-repeat center;
+        }
     }
 }
 
