--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -179,6 +179,9 @@
             width: 27px;
             background: url("../img/png/send.png") no-repeat center;
         }
+        &:hover{
+            filter: invert(1) brightness(130%);
+        }
     }
 }
 
