--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -12,8 +12,7 @@
         display: flex;
         flex-wrap: nowrap;
         justify-content: space-between;
-        align-items: flex-start;
-        // padding: 0;
+        align-items: flex-start; // padding: 0;
     }
     &--minimized {
         height: 66px !important;
@@ -44,6 +43,9 @@
         font-weight: 700;
         color: $color-mainGrey;
         display: inline-block;
+        &:hover {
+            transform: scale(1.05);
+        }
         &:first-child {
             padding-left: 0;
         }
@@ -75,22 +77,20 @@
             padding: 2px 11px;
             border: 3px solid $color-logoBorder;
             margin-right: -3px;
-
         }
         &--light {
             color: $h1-font-color;
         }
+    }
+    &:hover {
+        filter: contrast(100);
+        transform: scale(1.05);
     }
 }
 
 @media only screen and (min-width: 901px) {
     .nav__link--decorated:hover {
         color: $color-white;
-        border: 3px solid $color-logoBorder;
-        padding-right: 3px;
-        padding-left: 3px;
-        margin-left: -6px;
-        margin-right: -6px;
     }
 }
 
