--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            padding-right: 30px;
+            margin-right: -20px;
         }
         &__social {
             text-align: center;
@@ -72,19 +72,34 @@
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 568px) {
+@media (max-width: 1044px) {
+    .footer-inner__list {
+        padding-top: 45px;
+    }
+}
+
+@media (max-width: 568px) {
     .menu__h3 {
         padding: 10px 0;
     }
     .footer-inner__list {
-        margin: 0px 50px;
+        // margin: 0px 30px;
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 479px) {
-    /* Target portrait smartphones */
-    .menu__h3 {
-        padding: 10px 0;
+
+@media (max-width: 520px) {
+    .footer-inner__list {
+        width: 45%;
+    }
+}
+
+
+
+
+@media  (max-width: 479px) {
+    .footer-inner__list {
+        padding-top: 20px;
     }
     .footer-inner__menu {
         padding: 10px;
