--- a/src/scss/_hire.scss
+++ b/src/scss/_hire.scss
@@ -17,8 +17,19 @@ $border-radius: 2px;
   &__h3 {
     font-size: 22px;
   }
+  &__wrap {
+    position: relative;
+  }
   &__img {
     width: 100%;
+    &--overlay {
+      background-color: #ffc03880;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
   &__button {
     float: right;
@@ -55,6 +66,10 @@ $border-radius: 2px;
     &:focus {
       outline: none;
     }
+  }
+  &:hover &__img--overlay {
+    background: unset;
+    transition: all 1s ease;
   }
 }
 
