--- a/src/scss/_packages.scss
+++ b/src/scss/_packages.scss
@@ -1,168 +1,207 @@
-                                    .packages {
-                                        &__table {
-                                            width: 90%;
-                                            margin: 0 auto;
-                                            text-align: center;
-                                            font-size: $p-font-size;
-                                            font-weight: $h4-font-weight;
-                                            color: $color-liteGrey;
-                                            display: flex;
-                                            position: relative;
-                                            &::before {
-                                                @extend %pse;
-                                                left: 33%;
-                                            }
-                                            &::after {
-                                                @extend %pse;
-                                                right: 33%;
-                                            }
-                                        }
-                                        &__coll {
-                                            width: 33%;
-                                            padding-bottom: 50px;
-                                            &:hover .coll {
-                                                &__span {
-                                                    transform: scale(1.1);
-                                                    transform-origin: bottom;
-                                                    color: $p-font-color;
-                                                }
-                                                &__price {
-                                                    padding: 33px 0;
-                                                    b {
-                                                        font-size: 68px;
-                                                    }
-                                                }
-                                                &__btn,
-                                                &__name,
-                                                &__price {
-                                                    transform: scale(1.1);
-                                                    transform-origin: bottom;
-                                                }
-                                            }
-                                        }
-                                        &--grey {
-                                            color: $color-liteGrey;
-                                        }
-                                        &--red {
-                                            color: $color-red;
-                                        }
-                                        &--yellow {
-                                            color: $color-mainYellow;
-                                        }
-                                    }
-                                    
-                                    .coll {
-                                        &__span {
-                                            display: block;
-                                            transition: transform 0.25s linear 0.25s;
-                                        }
-                                        &__li {
-                                            display: block;
-                                            border-bottom: 1px solid $color-darkYellow;
-                                            padding: 15px 0;
-                                        }
-                                        &__price {
-                                            list-style: none;
-                                            font-size: 35px;
-                                            padding: 50px 0;
-                                            display: block;
-                                            transition: transform 0.25s linear 0.5s;
-                                        }
-                                        &__name {
-                                            font-size: 22px;
-                                            padding-bottom: 35px;
-                                            display: block;
-                                            transition: transform 0.25s linear;
-                                        }
-                                        &__btn {
-                                            border-radius: 3px;
-                                            box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
-                                            width: 192px;
-                                            height: 45px;
-                                            appearance: none;
-                                            color: $color-white;
-                                            border: 0;
-                                            white-space: nowrap;
-                                            user-select: none;
-                                            text-decoration: none;
-                                            transition: transform 0.75s linear 0.5s;
-                                            &--grey {
-                                                background-color: $color-liteGrey;
-                                            }
-                                            &--red {
-                                                background-color: $color-red;
-                                            }
-                                            &--yellow {
-                                                background-color: $color-mainYellow;
-                                            }
-                                            &:hover {
-                                                animation: shake 1.5s cubic-bezier(.36, .07, .19, .97) infinite;
-                                                transform: translate3d(0, 0, 0);
-                                                backface-visibility: hidden;
-                                                perspective: 1000px;
-                                                cursor: pointer;
-                                                @keyframes shake {
-                                                    10%,
-                                                    90% {
-                                                        transform: translate3d(-1px, 0, 0);
-                                                    }
-                                                    20%,
-                                                    80% {
-                                                        transform: translate3d(2px, 0, 0);
-                                                    }
-                                                    30%,
-                                                    50%,
-                                                    70% {
-                                                        transform: translate3d(-4px, 0, 0);
-                                                    }
-                                                    40%,
-                                                    60% {
-                                                        transform: translate3d(4px, 0, 0);
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                    
-                                    %pse {
-                                        content: " ";
-                                        width: 1px;
-                                        position: absolute;
-                                        background-color: $color-darkYellow;
-                                        height: 330px;
-                                        z-index: -1;
-                                        top: 10px;
-                                    }
-                                    /*
-                                    @keyframes tada {
-                                        from {
-                                          
-                                          transform: scale3d(1, 1, 1);
-                                        }
-                                      
-                                        10%,
-                                        20% {
-                                         
-                                          transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
-                                        }
-                                      
-                                        30%,
-                                        50%,
-                                        70%,
-                                        90% {
-                                          
-                                          transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-                                        }
-                                      
-                                        40%,
-                                        60%,
-                                        80% {
-                                         
-                                          transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-                                        }
-                                      
-                                        to {
-                                         
-                                          transform: scale3d(1, 1, 1);
-                                        }}
-                                      */
+.packages {
+    &__table {
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+        font-size: $p-font-size;
+        font-weight: $h4-font-weight;
+        color: $color-liteGrey;
+        display: flex;
+        position: relative;
+        &::before {
+            @extend %pse;
+            left: 33%;
+        }
+        &::after {
+            @extend %pse;
+            right: 33%;
+        }
+    }
+    &__coll {
+        width: 33%;
+        padding-bottom: 50px;
+        &:hover .coll {
+            &__span {
+                transform: scale(1.1);
+                transform-origin: bottom;
+                color: $p-font-color;
+            }
+            &__btn,
+            &__name {
+                transform: scale(1.1);
+                transform-origin: bottom;
+            }
+            &__price--dol {
+                transform: scale(2);
+                transform-origin: right;
+            }
+        }
+    }
+    &--grey {
+        color: $color-liteGrey;
+    }
+    &--red {
+        color: $color-red;
+    }
+    &--yellow {
+        color: $color-mainYellow;
+    }
+}
+
+.coll {
+    &__span {
+        display: block;
+        transition: transform 0.25s ease-in 0.25s;
+        font-weight: $h4-font-weight;
+    }
+    &__li {
+        display: block;
+        border-bottom: 1px solid $color-darkYellow;
+        padding: 14px 0;
+    }
+    &__price--dol {
+        display: inline-block;
+        font-size: 35px;
+        padding: 55px 0 48px 0;
+        transition: transform 0.75s ease-in;
+    }
+    &__name {
+        font-size: 22px;
+        font-weight: $h3-font-weight;
+        padding-bottom: 28px;
+        display: block;
+        transition: transform 0.25s ease-in;
+        &--mobile {
+            display: none;
+        }
+    }
+    &__btn {
+        border-radius: 3px;
+        box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
+        width: 192px;
+        height: 45px;
+        appearance: none;
+        color: $color-white;
+        border: 0;
+        white-space: nowrap;
+        user-select: none;
+        text-decoration: none;
+        transition: transform 0.75s linear 0.5s;
+        &--grey {
+            background-color: $color-liteGrey;
+        }
+        &--red {
+            background-color: $color-red;
+        }
+        &--yellow {
+            background-color: $color-mainYellow;
+        }
+        &:hover {
+            animation: shake 1.5s cubic-bezier(.36, .07, .19, .97) infinite;
+            transform: translate3d(0, 0, 0);
+            backface-visibility: hidden;
+            perspective: 1000px;
+            cursor: pointer;
+            @keyframes shake {
+                10%,
+                90% {
+                    transform: translate3d(-1px, 0, 0);
+                }
+                20%,
+                80% {
+                    transform: translate3d(2px, 0, 0);
+                }
+                30%,
+                50%,
+                70% {
+                    transform: translate3d(-4px, 0, 0);
+                }
+                40%,
+                60% {
+                    transform: translate3d(4px, 0, 0);
+                }
+            }
+        }
+    }
+}
+
+%pse {
+    content: " ";
+    width: 1px;
+    position: absolute;
+    background-color: $color-darkYellow;
+    height: 330px;
+    z-index: -1;
+    top: 10px;
+}
+
+@media screen and (max-width:768px) {
+    .coll {
+        &__btn {
+            width: 70%;
+        }
+        &__price {
+            padding: 15px;
+        }
+    }
+    .packages {
+        &__table {
+            width: 100%;
+        }
+        &__coll:hover .coll {
+            &__price {
+                padding: 15px 0;
+                &--dol {
+                    transform: scale(1.5);
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:568px) {
+    .packages__coll:hover .coll__span {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width:480px) {
+    .packages {
+        &__table {
+            flex-wrap: wrap;
+            &::before,
+            &::after {
+                width: 0px;
+            }
+        }
+        &__coll {
+            width: 80%;
+            padding: 0;
+            margin: 10px auto;
+        }
+    }
+    .coll {
+        &__name {
+            display: none;
+            &--mobile {
+                display: block;
+                color: white;
+                padding-bottom: 15px;
+                padding-top: 15px;
+                opacity: 0.9;
+                transform: skewX(-3deg);
+                border-radius: 3px;
+            }
+        }
+        &__span {
+            transform: scale(1.1);
+            transform-origin: bottom;
+            color: $p-font-color;
+        }
+        &__price--dol {
+            transform: scale(1.3);
+            transform-origin: right;
+            padding: 10px 0;
+        }
+    }
+}
